# quire

./: package-lock.json  package.json  page.tsx  tailwind.config.js  tsconfig.json  vite.config.ts
app/: layout.tsx  page.tsx
app/dashboard/: page.tsx
app/templates/: page.tsx
components/: Header.tsx  ProjectList.tsx  Sidebar.tsx
lib/: data.ts  types.ts
src/: App.css  App.tsx  ProjectsPage.tsx  main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/ai/: claude.rs  mod.rs  openai.rs
src-tauri/src/compiler/: mod.rs  pdf.rs
src-tauri/src/utils/: mod.rs
src/components/: AppHeader.tsx  ProjectsPage.tsx
src/components/Editor/: StatusBar.tsx  Toolbar.tsx  index.tsx
src/components/Preview/: PDFViewer.tsx  index.tsx
src/components/editor/: CodeEditor.tsx  EditorHeader.tsx  EditorPage.tsx  FileTree.tsx  PreviewPanel.tsx
src/components/projects/: ProjectHeader.tsx  ProjectList.tsx  ProjectSearch.tsx  ProjectSidebar.tsx  ProjectsPage.tsx
src/hooks/: useAI.ts  useTypst.ts
